@@ -1,3 +1,8 @@
+2019-02-20 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/SDCCopt.c:
+	  Generalize loop narrowing (part of RFE #530).
+
 2019-02-13 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/z80/gen.c:
